# User-CRUD-API

./: .gitignore  CLAUDE.md  CODING_GUIDELINES.md  Cargo.toml  DESIGN.md  LICENSE  README.md  TODO.md  ToDo.md  openapi.yaml  rust-toolchain.toml
migrations/: 20260304000000_init.down.sql  20260304000000_init.sql
src/: auth.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  rate_limit.rs  snowflake.rs  state.rs  validation.rs
src/models/: auth.rs  mod.rs  user.rs
src/routes/: auth.rs  users.rs
tests/: api.rs
