[package]
name = "user-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
dotenvy = "0.15"
tower = "0.5"
tower-http = { version = "0.6", features = [
  "cors",
  "trace",
  "compression-gzip",
  "timeout",
  "normalize-path",
] }
tower-helmet = "0.3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
bcrypt = "0.18.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tower_governor = "0.8.0"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
